# openttd-timetable-tool

./: Cargo.toml  Readme.md  index.html
src/: main.rs  timetable.rs
