[package]
name = "openttd-timetable-tool"
version = "0.2.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
edition = "2018"
description = "A tool for computing the start dates of time tables."
license = "MIT/Apache-2.0"
repository = "https://github.com/ThomasdenH/openttd-timetable-tool"

[dependencies]
chrono = "0.4.6"
